--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Compiled class file
 *.class
 
+# Maven
+target/
+!.mvn/wrapper/maven-wrapper.jar
+
 # Log file
 *.log
 
@@ -24,7 +28,7 @@ hs_err_pid*
 replay_pid*
 
 ### IntelliJ IDEA ###
-.idea
+.idea/
 *.iws
 *.iml
 *.ipr
